--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-DB_HOST=localhost
+DB_HOST=127.127.126.3
 DB_USER=root
 DB_PASSWORD=
 DB_NAME=SkillsApp
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
