--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-server/node_modules/
-server/package-lock.json
-server/.env
-
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-/tmp
+node_modules
+dist
+dist-ssr
+*.local
 
-.env
-
+# Editor directories and files
+admin/.vscode/extensions.json
+!.vscode/extensions.json
+.idea
 .DS_Store
-
-.vscode/
-.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
