--- a/admin/package.json
+++ b/admin/package.json
@@ -13,8 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "pinia": "^2.2.6",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.7.4"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
