--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev-app": "vite",
+    "build-app": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
