--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-DB_HOST=127.127.126.3
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=SkillsApp
+DB_HOST=musthaves.beget.tech
+DB_USER=musthaves_skills
+DB_PASSWORD=3aLOv!NqKqbK
+DB_NAME=musthaves_skills
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 JWT_SECRET_KEY=123
